# the-legend-of-chris-minnahl

./: .gitignore  CMakeLists.txt  Commando  LICENSE  Makefile  Manager.cc  README.md  TheLegendOfChrisMinnahl  config.h  idee.txt  install_manifest.txt  liens_diagrammes_rapport.txt  main.cc  manager.cc  manager.h  test.txt
autres_a_supprimer/: Rapport_projet_L3.docx
autres_a_supprimer/gui/: button.cc  button.h  panel.cc
data/TheLegendOfChrisMinnahl/: game_rules.txt
data/TheLegendOfChrisMinnahl/levels/: 1.json  1.txt  2.json  2.txt  3.json  3.txt
gui/: button.h  label.cc  label.h  panel.h
levels/: 1.txt  2.txt  3.txt
local/: guard.cc  guard.h  level.cc  level.h  map.cc  map.h  minimap.cc  minimap.h  player.cc  player.h  wall.cc  wall.h
prototypePython/: guard.py
scenes/: end.cc  end.h  game.cc  game.h  map.cc  map.h  mapViewer.cc  mapViewer.h  pause.cc  pause.h  rules.cc  rules.h  title.cc  title.h
